--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.37.3",
     "connect-mongo": "^5.0.0",
@@ -23,7 +24,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
-    "passport": "^0.6.0",
+    "passport": "^0.5.0",
     "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
